--- a/socialmedia/socialapp/templates/pages/all_user.html
+++ b/socialmedia/socialapp/templates/pages/all_user.html
@@ -105,5 +105,7 @@
 
 <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+<script src="{%static 'handler.js' %}"> </script>
+
 </body>
 </html>
