--- a/socialmedia/socialapp/templates/pages/home.html
+++ b/socialmedia/socialapp/templates/pages/home.html
@@ -1,14 +1,13 @@
 <!doctype html>
 <html >
   <head>
-
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <!-- jQuery !-->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"> </script>
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"> </script>
     <!-- jQuery UI !-->
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
@@ -16,7 +15,6 @@
 
     <!-- Bootstrap CSS -->
 {% load static %}
-
     <link rel="stylesheet" href="{%static 'bootstrap.min.css' %}">
     <style>
       .border{
@@ -34,7 +32,6 @@
     </style>
   </head>
 <body>
-
   {% include 'pages/navbar.html' %}
 
 <br>
@@ -95,7 +92,6 @@
   </br>
     {% endfor %}
     <div class="text-center">
-
           {% if posts.has_other_pages %}
             <ul class="pagination">
               {% if posts.has_previous %}
@@ -142,21 +138,21 @@
                   <hr/>
 
         {%  for category in cat_subscribtion_arr %}
-        
+          <hr/>
   <div>
-    <a href="/socialapp/{{category.cat_id}}/cat_posts" class="w3-bar-item w3-button"> 
-
+    <a href="/socialapp/{{category.cat_id}}/cat_posts" class="w3-bar-item w3-button">
     {{category.cat_name}}</a>
-{% if category.isSubscriped == True  %}
-<button id={{category.cat_id}} onclick="unsubscribe({{category.cat_id}})" class="btn btn-primary test">Unsubscribe</button>
-{% else %}
-<button id={{category.cat_id}} onclick="subscribe({{category.cat_id}})" class="btn btn-danger test">Subscribe</button>
+    {% if user.is_authenticated %}
+        {% if category.isSubscriped == True  %}
+  <button id={{category.cat_id}} onclick="unsubscribe({{category.cat_id}})" class="btn btn-primary test">Unsubscribe</button>
+      {% else %}
+  <button id={{category.cat_id}} onclick="subscribe({{category.cat_id}})" class="btn btn-danger test">Subscribe</button>
 {% endif %}
   </div>
+  {% endif %}
   {% endfor %}
                   <hr/>
           </div>
-
         </div>
     </div>
 </div>
@@ -168,13 +164,11 @@
   function subscribe(cat_id) {
       window.location = "/socialapp/subscribe/" + cat_id
     }
-
     function unsubscribe(cat_id) {
       window.location = "/socialapp/unsubscribe/" + cat_id
     }
 
 </script>
-
 </body>
 
 </html>
