--- a/socialmedia/socialapp/templates/pages/navbar.html
+++ b/socialmedia/socialapp/templates/pages/navbar.html
@@ -27,11 +27,10 @@
        {% endif %}
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
+          Options
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
+  
           {% if user.is_authenticated %}
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="/socialapp/accounts/logout">logout</a>
