handel comment, reply and bootstrap in registration form

--- a/socialmedia/socialapp/templates/user/new.html
+++ b/socialmedia/socialapp/templates/user/new.html
@@ -50,7 +50,7 @@
   			<div class="col-lg-5 col-lg-offset-3 col-12 comment-main rounded" align="center">
   				{% load static %}
     			{% if form.has_errors %}
-					<p>Your username or password don't mat</p>
+					<p>Your username or password don't match</p>
 				{% endif %}
 				<h3 class="title is-size3">Register Form</h3>
 				<br/>
