--- a/socialmedia/socialapp/templates/pages/post_page.html
+++ b/socialmedia/socialapp/templates/pages/post_page.html
@@ -125,36 +125,35 @@
                   <div class="col-lg-12 pr-0"> 
                     <p>{{comment.c_body}}</p>
                   </div>
-                  {% if comment.R_check %}
-                    <div class="title col-lg-4 col-lg-offset-4 post_body box_reply">
+                  <div c="{{comment.id}}" class="col-lg-12">
+                    <input type="text" placeholder="Add Reply"  class="reply_value" comment_id="{{comment.id}}" width="250px"/>
+                    <button type="button" class="btn btn-primary" class="add_reply" comment_id="{{comment.id}}">Reply</button>
+                    <div class="title col-lg-3 post_body box_reply">
                       <span class=" text-center">Reply</span>
-                    </div> 
-                    <div class="all_replys col-lg-12" class="border" rep_com_id="{{comment.id}}">
+                    </div>
+                    {% if comment.R_check %} 
+                    <div id = "replays" class="all_replys col-lg-12 {{comment.id}}" class="border" rep_com_id="{{comment.id}}">
                       {% for reply in all_replys %}
-                        {% if reply.post_id_id == comment.id %}
-                          <div class="rep"  >
-                            {% for user in allusers %}
-                              {% if user.id == reply.R_user_id %}
-                                <h4>{{user.username}}</h4>
-                              {% endif %} 
-                            {% endfor %}
-                            <p>{{reply.time_reply}}</p>
-                            <p>{{reply.R_body}}</p>
-                          </div>
-                        {% endif %}  
+                      {% if reply.post_id_id == comment.id %}
+                        <div class="rep"  >
+                          {% for user in allusers %}
+                            {% if user.id == reply.R_user_id %}
+                              <h4>{{user.username}}</h4>
+                            {% endif %} 
+                          {% endfor %}
+                          <p>{{reply.time_reply}}</p>
+                          <p>{{reply.R_body}}</p>
+                        </div>
+                      {% endif %}  
                       {% endfor %}
                     </div> 
-                  {% else %}
-                    <div c="{{comment.id}}" class="col-lg-12">
-                      <input type="text" placeholder="Add Reply"  class="reply_value" comment_id="{{comment.id}}" width="250px"/>
-                      <button type="button" class="btn btn-primary" class="add_reply" comment_id="{{comment.id}}">Reply</button>
-                    </div>
-                  {% endif %}
+                    {% endif %}
+                  </div>
                 {% endif %} 
               {% endfor %}
             </div> 
           {% endif %}
-          <div class="line container-fluid">
+          <div class="line container-fluid" col-lg-12>
           </div>  
          {% endfor %}  
       </div>
@@ -164,8 +163,7 @@
     <script src="{% static 'js/jquery-3.1.1.js' %}"></script>
     <script src="{% static 'bootstrap.bundle.min.js' %}"></script>
     <script type="text/javascript">
-      $(document).ready(function(){
-  
+      $(document).ready(function(){ 
         $('#add_comment').on('click',function(e){ 
           var url_path=window.location.href;
           var post_id= $(this).attr("post_id");
@@ -178,14 +176,18 @@
             success:function(data){
               if(data.success)
               {  
-                $("#comment_value").val(" ");
-                $("#comments_post").prepend('<div class="comm"><h3>'+data.user_name+'</h3><p>'+data.time+'</p><p>'+data.comment+'</p> <input type="text" placeholder="Add Reply"  class="reply_value" comment_id="'+data.com_id+'" width="250px"><button type="button" class="btn btn-primary" class="add_reply" comment_id="'+data.com_id+'">Reply</button></div>');
+                $("#comment_value").val("");
+                console.log(data.user_name)
+                $("#comments_post").prepend('<div class="comm comment col-lg-10 col-lg-offset-1"><h3 class="title comm col-lg-12 ">'+data.user_name+'</h3><p>'+data.time+'</p><p>'+data.comment+'</p><div c="'+data.com_id+'" class="col-lg-12"><input type="text" placeholder="Add Reply"  class="reply_value" comment_id="'+data.com_id+'" width="250px"><button type="button" class="btn btn-primary" class="add_reply" comment_id="'+data.com_id+'">Reply</button><div class="title col-lg-3 post_body box_reply"><span class=" text-center">Reply</span></div><divid = "replays" class="all_replys col-lg-12 {{comment.id}}" class="border" rep_com_id="{{comment.id}}"></div></div></div>');
+                 console.log($("#comments_post").children());
+                  act_btn();
               }  
             }
           });
                                                                                                                                                                 
         });
-    
+        act_btn();
+        function act_btn(){
         $('button[comment_id]').on('click',function(e){
           var parent=$(this).parent();
           var reply_data =$(this).parent().children().eq(0).val();
@@ -201,14 +203,14 @@
             success:function(data){
               if(data.success)
               {  
-                parent.children().eq(0).val(" ");
-                parent.children().remove();
-                parent.prepend('<p class="text-center">Reply</p><h4>'+data.user_name+'</h4><p>'+data.time+'</p><p>'+data.reply+'</p>');
+                parent.children().eq(0).val("");
+                //parent.children().remove();
+                parent.children().eq(3).prepend('<div class="rep col-lg-12"><h4>'+data.user_name+'</h4><p>'+data.time+'</p><p>'+data.reply+'</p></div>');
               } 
             } 
           });
         });
-
+        }
       });
     </script>  
  </body>
