--- a/socialmedia/socialapp/templates/pages/updatepst.html
+++ b/socialmedia/socialapp/templates/pages/updatepst.html
@@ -36,7 +36,7 @@
              <h3 class="alert alert-info text-center" style="margin-top: 20px">UPDATE POST</h3>
 <br/>
 
-<form method="POST" class="">{%csrf_token%}
+<form method="POST" class="" enctype="multipart/form-data">{%csrf_token%}
 	<h3>{{form.as_p}}</h3>
 	<button type='submit' class="btn btn-info" >Save</button>
 	<br>
